internal/xds/translator/testdata/out/xds-ir/mixed-websocket-and-h2c-backends.routes.yaml
- ignorePortInHostMatching: true
  name: weighted-protocol-listener
  virtualHosts:
  - domains:
    - '*'
    name: weighted-protocol-listener/*
    routes:
    - match:
        prefix: /
      name: weighted-protocol-route
      route:
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
        upgradeConfigs:
        - upgradeType: websocket
        weightedClusters:
          clusters:
          - name: weighted-protocol-route-dest/backend/0
            weight: 1
          - name: weighted-protocol-route-dest/backend/1
            weight: 1
